<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A.R.M</string>
    <string name="menu_settings">Settings</string>
    <string name="start_stop">Hold to move arm\n\n\nRelease to stop</string>
    <string name="release_to_stop">Release to stop</string>
    <string name="no_ip">Please set a server IP</string>
    <string name="connecting">Connecting to server&#8230;</string>
    <string name="connect_error">Connection failed!\nTap to retry</string>
    <string name="home_dialog_message">You are about to return the arm to home position</string>
    <string name="home_dialog_title">Home robot arm</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_lock_axis">Lock Axis</string>
    <string name="lock_z">Lock Z Axis</string>
    <string name="lock_x">Lock X Axis</string>
    <string name="lock_y">Lock Y Axis</string>
    <string name="lock_roll">Lock Roll</string>
    <string name="lock_pitch">Lock Pitch</string>
    <string name="gripper_control"><b><u>Gripper Control</u></b></string>
    <string name="open_gripper"><b><u>Open</u></b></string>
    <string name="close_gripper"><b><u>Closed</u></b></string>
    <string name="done_button">Done</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_IP">Server IP</string>
    <string name="setting_port">Server port</string>
    <string name="setting_send_rate">Device to server send rate &#40;ms&#41;</string>
    <string name="setting_sensitivity">Device movement sensitivity</string>
    <string name="setting_vibration">Enable vibration feedback</string>
    <string name="setting_sound">Enable sounds</string>
    <string name="setting_accelHZ">Sensor sampling rate</string>
    <string name="playback"><b><u>Playback Control</u></b></string>
    <string name="delete_one">Delete <b>ONE</b></string>
    <string name="delete_all">Delete <b>ALL</b></string>
    <string name="trash_dialog_title">Delete saved positions</string>
    <string name="trash_dialog_message">Delete previously saved ARM positions</string>
    <string name="playback_dialog_title">Saved position playback</string>
    <string name="playback_dialog_message">Begin playback?\n<b>WARNING:</b> ARM will be homed!</string>
    <string name="begin_playback">Start</string>
    <string name="playback_text">Playback Mode\n\n\nTap to cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_calibration">Calibration</string>
    <string name="calibration_step1">1. Rest the device on a flat surface</string>
    <string name="calibration_step2">2. Press "Start Calibration" button</string>
    <string name="calibration_step3">3. Wait till the progress bar is finished</string>
    <string name="calibration_step4">4. Choose to save or discard the offset values</string>
    <string name="button_calibration">Start Calibration</string>
    <string name="current_offset">Current Offsets</string>
    <string name="save">Save</string>
    <string name="save_offset_message">Do you wish to keep the results of this calibration?</string>
    <string name="save_offset_title">Save new offsets?</string>
    <string name="title_activity_about">About</string>
    <string name="about_1"><b><u>Android Robotic Manipulator (A.R.M.)</u></b></string>
    <string name="about_2">Version 1.0 (tested on Galaxy Nexus)\nClass project for ECE 1778\nUniversity of Toronto, Winter 2013\n</string>
    <string name="about_3"><b><u>Original Concept and Development</u></b></string>
    <string name="about_4">Paul Grouchy\nRené Rail-Ip\nHao Yan\n</string>
    <string name="about_5"><b><u>Logo Design</u></b></string>
    <string name="about_6">Sebastian Koever\n</string>
    <string name="about_7"><b><u>Original Source Code</u></b></string>
    <string name="about_8"><a href="https://github.com/rodericus1987/roboArmApp">https://github.com/rodericus1987/roboArmApp</a></string>

</resources>