<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        tools:context=".AboutActivity" >

	    <TextView
		     android:textColor="#FFFFFF"
		     android:textSize="20sp"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/about_1" />
	    
	    <TextView
		     android:textColor="#FFFFFF"
		     android:textSize="15sp"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/about_2" />
	    
	    <TextView
		     android:textColor="#FFFFFF"
		     android:textSize="20sp"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/about_3" />
	    
	    <TextView
		     android:textColor="#FFFFFF"
		     android:textSize="15sp"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/about_4" />
	    
	    <TextView
		     android:textColor="#FFFFFF"
		     android:textSize="20sp"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/about_5" />
	    
	    <TextView
		     android:textColor="#FFFFFF"
		     android:textSize="15sp"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/about_6" />
	    
	    <TextView
		     android:textColor="#FFFFFF"
		     android:textSize="20sp"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/about_7" />
	    
	    <TextView
	         android:id="@+id/code_link"
		     android:textColor="#FFFFFF"
		     android:textSize="15sp"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/about_8" />
	    
	    </LinearLayout>

</ScrollView>