<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        tools:context=".SettingsActivity" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/setting_IP"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editIP"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:inputType="numberDecimal|textPhonetic"
            android:lines="1"
            android:singleLine="true"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/setting_port"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editPort"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:lines="1"
            android:singleLine="true"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/setting_send_rate"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editSendRate"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:inputType="number"
            android:lines="1"
            android:singleLine="true"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/setting_sensitivity"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/sensitivity"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/vibration_text"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingTop="22dp"
                android:text="@string/setting_vibration"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <View
                android:layout_width="51dp"
                android:layout_height="0dp" />

            <CheckBox
                android:id="@+id/vibration"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:text="" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sound_text"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingTop="22dp"
                android:text="@string/setting_sound"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <View
                android:layout_width="150dp"
                android:layout_height="0dp" />

            <CheckBox
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="70dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

    </LinearLayout>

</ScrollView>